.env.sample の上流URLを更新し、setup.sh のスクリプト権限設定を修正。reload.sh を新規作成。

--- a/.env.sample
+++ b/.env.sample
@@ -6,7 +6,7 @@
 # ==============================================================================
 
 # 表示する上流URL（nginx がプロキシする先）
-KURUPIRO_UPSTREAM_URL="https://example.com/kurupiro"
+KURUPIRO_UPSTREAM_URL="https://kurupiro.ichipiro.net"
 
 # ChromiumでアクセスするURL（通常は localhost）
 KURUPIRO_KIOSK_URL="http://localhost/"
