.env.sample にブラウザ自動リロード間隔の設定を追加し、setup.sh でその値を使用するように修正

--- a/.env.sample
+++ b/.env.sample
@@ -13,3 +13,6 @@ KURUPIRO_KIOSK_URL="http://localhost/"
 
 # 自動シャットダウン時刻（HH:MM形式）
 KURUPIRO_SHUTDOWN_TIME="21:57"
+
+# ブラウザ自動リロード間隔（例: 2h, 30min, 1min, 60s）
+KURUPIRO_RELOAD_INTERVAL="2h"
