--- a/.env.sample
+++ b/.env.sample
@@ -6,7 +6,7 @@
 # ==============================================================================
 
 # 表示する上流URL（nginx がプロキシする先）
-KURUPIRO_UPSTREAM_URL="https://kurupiro.ichipiro.net"
+KURUPIRO_UPSTREAM_URL="https://signage.kurupiro.ichipiro.net/signage"
 
 # ChromiumでアクセスするURL（通常は localhost）
 KURUPIRO_KIOSK_URL="http://localhost/"
